updates to craft 5.5.4

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -12,11 +12,11 @@ CRAFT_SECURITY_KEY=
 
 # Database connection settings
 CRAFT_DB_DRIVER=mysql
-CRAFT_DB_SERVER=127.0.0.1
+CRAFT_DB_SERVER=db
 CRAFT_DB_PORT=3306
-CRAFT_DB_DATABASE=
-CRAFT_DB_USER=root
-CRAFT_DB_PASSWORD=
+CRAFT_DB_DATABASE=craft
+CRAFT_DB_USER=craft
+CRAFT_DB_PASSWORD=craft
 CRAFT_DB_SCHEMA=public
 CRAFT_DB_TABLE_PREFIX=
 
@@ -24,3 +24,7 @@ CRAFT_DB_TABLE_PREFIX=
 DEV_MODE=true
 ALLOW_ADMIN_CHANGES=true
 DISALLOW_ROBOTS=true
+
+DOCKER_MYSQL_PUBLIC_PORT=3307
+DOCKER_WEB_PUBLIC_PORT=8080
+DOCKER_REDIS_PUBLIC_PORT=6380
