--- a/.env.example.production
+++ b/.env.example.production
@@ -20,6 +20,8 @@ CRAFT_DB_PASSWORD=
 CRAFT_DB_SCHEMA=public
 CRAFT_DB_TABLE_PREFIX=
 
+PRIMARY_SITE_URL=http://localhost:8080
+
 # General settings (see config/general.php)
 DEV_MODE=false
 ALLOW_ADMIN_CHANGES=false
