--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "require": {
-    "craftcms/cms": "^4.4.0",
-    "nystudio107/craft-vite": "^4.0",
+    "craftcms/cms": "5.5.4",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
-    "craftcms/generator": "^1.3.0",
+    "craftcms/generator": "^2.0.0",
+    "nystudio107/craft-vite": "^5.0",
     "yiisoft/yii2-shell": "^2.0.3"
   },
   "autoload": {
@@ -21,12 +21,19 @@
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "8.0.2"
+      "php": "8.2"
     }
   },
   "scripts": {
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
     ]
-  }
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://composer.craftcms.com",
+      "canonical": false
+    }
+  ]
 }
